# ar-c

./: .gitignore  COMPILER.md  Cargo.toml  README.md  agent-test.ts  build.rs  declarations.d.ts  package-lock.json  package.json  test.ts  test2.ts  test3.ts  test4.ts  tsconfig.json
docs/: ARC.md  NEW-EXAMPLES.md  PLAN.md  SYNTAXDESIGN.md
src/: main.rs  quilt.rs
src/bundle/: mod.rs
src/cli/: build.rs  check.rs  logger.rs  mod.rs  new.rs  upload.rs
src/compiler/: mod.rs  schema.rs
src/compiler/typescript/: mod.rs  utils.rs  visitor.rs
src/config/: mod.rs
src/grpc/: client.rs  mod.rs
src/templates/: aria.toml.template  llm.xml.template  main.ts.template  package.json.template  symphony.config.ts.template
tmp_bundle/: manifest.json  package.json
tmp_bundle/implementations/agents/: ReminderAgent.js  myAgent.js
tmp_bundle/implementations/tools/: myTool.js
tmp_bundle/metadata/: build.json
